--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,11 @@
     </issueManagement>
 
     <properties>
+        <!-- Properties Needed To Build On Java 24 (Start) -->
         <java.version>24</java.version>
-        <!-- Maven Dependency Analyzer Version -->
         <maven-dependency-analyzer.version>1.16.0</maven-dependency-analyzer.version>
         <maven-pmd-plugin.version>3.27.0</maven-pmd-plugin.version>
-<!--        <jitpack.version>1.117.0</jitpack.version>-->
+        <!-- Properties Needed To Build On Java 24 (End) -->
 
         <activej-bytebuf.version>4.3-r10</activej-bytebuf.version>
         <activej-common.version>4.3-r8</activej-common.version>
@@ -129,13 +129,7 @@
 
     <!-- All Dependencies and versions used in this project are pre-defined here for use in modules -->
     <dependencyManagement>
-
         <dependencies>
-<!--            <dependency>-->
-<!--                <groupId>com.github.ikmdev</groupId>-->
-<!--                <artifactId>tinkar-core</artifactId>-->
-<!--                <version>${jitpack.version}</version>-->
-<!--            </dependency>-->
 			<!-- Submodules -->
             <dependency>
                 <groupId>dev.ikm.tinkar</groupId>
@@ -598,28 +592,6 @@
             </plugin>
         </plugins>
     </build>
-    <profiles>
-    <profile>
-            <!-- To disable this, use something like "mvn install -P!codeQuality" -->
-            <id>codeQuality</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                                    <!-- PMD CHECK: Fails build if there are "High" priority violations -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-pmd-plugin</artifactId>
-                    <configuration>
-                        <aggregate combine.self="override"></aggregate>
-                        <targetJdk>${java.version}</targetJdk>
-                    </configuration>
-                </plugin>
-                </plugins>
-            </build>
-    </profile>
-    </profiles>
 
     <!-- for site generation -->
     <reporting>
@@ -631,4 +603,28 @@
             </plugin>
         </plugins>
     </reporting>
+
+    <profiles>
+        <!-- codeQuality profile to override pmd configuration from build-parent
+         Need to ovverride aggregate parameter as it is deprecated. -->
+        <profile>
+            <!-- To disable this, use something like "mvn install -P!codeQuality" -->
+            <id>codeQuality</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-pmd-plugin</artifactId>
+                        <configuration>
+                            <aggregate combine.self="override"></aggregate> <!-- Overridden due to deprecation -->
+                            <targetJdk>${java.version}</targetJdk>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
