--- a/entity/pom.xml
+++ b/entity/pom.xml
@@ -21,6 +21,11 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>collection</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>common</artifactId>
         </dependency>
 
