--- a/provider/search-provider/pom.xml
+++ b/provider/search-provider/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.119.0-entity-coordinate-merge-SNAPSHOT</version>
+        <version>1.119.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>search-provider</artifactId>
