--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -66,7 +66,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>coordinate</artifactId>
+            <artifactId>entity</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
