--- a/reasoner/reasoner-service/pom.xml
+++ b/reasoner/reasoner-service/pom.xml
@@ -15,7 +15,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>coordinate</artifactId>
+			<artifactId>entity</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
