--- a/reasoner/reasoner-service/pom.xml
+++ b/reasoner/reasoner-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>reasoner</artifactId>
-		<version>1.120.0-AR-576-implement-membership-semantic-filter-SNAPSHOT</version>
+		<version>1.120.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>reasoner-service</artifactId>
