--- a/reasoner/reasoner-elk-owl/pom.xml
+++ b/reasoner/reasoner-elk-owl/pom.xml
@@ -47,11 +47,11 @@
 			<artifactId>elk-snomed-owl</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>${tinkar-jpms-deps.groupId}</groupId>
+			<groupId>org.eclipse.collections</groupId>
 			<artifactId>eclipse-collections</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>${tinkar-jpms-deps.groupId}</groupId>
+			<groupId>org.eclipse.collections</groupId>
 			<artifactId>eclipse-collections-api</artifactId>
 		</dependency>
 	</dependencies>
