--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 
         <jackson.version>2.19.0</jackson.version>
         <jgrapht.version>1.5.0</jgrapht.version>
-        <mockito.version>5.17.0</mockito.version>
+        <mockito.version>5.19.0</mockito.version>
         <mvstore.version>2.3.232-r2</mvstore.version>
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
         <lucene-core.version>9.12.1</lucene-core.version>
@@ -111,14 +111,14 @@
         <tinkar-jpms-deps.groupId>dev.ikm.jpms</tinkar-jpms-deps.groupId>
 		<jpms-auto-service.version>1.1.1-r2</jpms-auto-service.version>
 		<jpms-record-builder-core.version>44-r1</jpms-record-builder-core.version>
-		<eclipse-collections.version>12.0.0.M3-r2</eclipse-collections.version>
-		<eclipse-collections-api.version>12.0.0.M3-r2</eclipse-collections-api.version>
+		<eclipse-collections.version>13.0.0</eclipse-collections.version>
+		<eclipse-collections-api.version>13.0.0</eclipse-collections-api.version>
 		<jheaps.version>0.14-r6</jheaps.version>
 		<roaringbitmap.version>1.4.0</roaringbitmap.version>
 
-		<hybrid-reasoner.version>1.1.2</hybrid-reasoner.version>
-		<ikm-reasoner.version>0.39.2</ikm-reasoner.version>
-		<owlapi.version>4.8.4</owlapi.version>
+		<hybrid-reasoner.version>1.1.5-eclipse-13.0.0-SNAPSHOT</hybrid-reasoner.version>
+		<ikm-reasoner.version>0.39.4-eclipse-13.0.0-SNAPSHOT</ikm-reasoner.version>
+		<owlapi.version>4.8.5-eclipse-13.0.0-SNAPSHOT</owlapi.version>
     </properties>
 
     <!-- All Dependencies and versions used in this project are pre-defined here for use in modules -->
@@ -314,13 +314,13 @@
             </dependency>
 
             <dependency>
-                <groupId>${tinkar-jpms-deps.groupId}</groupId>
+                <groupId>org.eclipse.collections</groupId>
                 <artifactId>eclipse-collections</artifactId>
                 <version>${eclipse-collections.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${tinkar-jpms-deps.groupId}</groupId>
+                <groupId>org.eclipse.collections</groupId>
                 <artifactId>eclipse-collections-api</artifactId>
                 <version>${eclipse-collections-api.version}</version>
             </dependency>
