--- a/provider/data-websocket-client-provider/pom.xml
+++ b/provider/data-websocket-client-provider/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
 
         <dependency>
-            <groupId>${tinkar-jpms-deps.groupId}</groupId>
+            <groupId>org.eclipse.collections</groupId>
             <artifactId>eclipse-collections-api</artifactId>
             <scope>compile</scope>
         </dependency>
