--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -16,7 +16,7 @@
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <skip.unit.tests>false</skip.unit.tests>
         <skip.integration.tests>false</skip.integration.tests>
-        <tinkar-composer.version>1.10.0-eclipse-13.0.0-SNAPSHOT</tinkar-composer.version>
+        <tinkar-composer.version>1.9.0</tinkar-composer.version>
     </properties>
 
     <dependencyManagement>
