--- a/provider/search-provider/pom.xml
+++ b/provider/search-provider/pom.xml
@@ -21,7 +21,7 @@
 
 
         <dependency>
-            <groupId>${tinkar-jpms-deps.groupId}</groupId>
+            <groupId>org.eclipse.collections</groupId>
             <artifactId>eclipse-collections-api</artifactId>
         </dependency>
 
