--- a/provider/changeset-writer-provider/pom.xml
+++ b/provider/changeset-writer-provider/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.124.0-SNAPSHOT</version>
+        <version>1.124.0-IIA-2466-maintain-component-set-order-SNAPSHOT</version>
     </parent>
 
     <artifactId>changeset-writer-provider</artifactId>
