--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -161,6 +161,7 @@
         <dependency>
             <groupId>dev.ikm.tinkar</groupId>
             <artifactId>changeset-writer-provider</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
