--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,9 +13,9 @@
 
     <name>TINKAR Common</name>
 
-    <properties>
-        <plugin-boot-layer-module.version>1.0-SNAPSHOT</plugin-boot-layer-module.version>
-    </properties>
+<!--    <properties>-->
+<!--        <plugin-boot-layer-module.version>1.0-SNAPSHOT</plugin-boot-layer-module.version>-->
+<!--    </properties>-->
 
     <dependencies>
         <dependency>
@@ -46,6 +46,17 @@
             <groupId>org.eclipse.collections</groupId>
             <artifactId>eclipse-collections-api</artifactId>
         </dependency>
-        
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>25</source>
+                    <target>25</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
