--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
+	<modelVersion>4.1.0</modelVersion>
 
 	<parent>
 		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>tinkar-core</artifactId>
-		<version>1.126.0-gudid-db-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>reasoner</artifactId>
@@ -150,7 +149,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<useModulePath>true</useModulePath>
+					<useModulePath>false</useModulePath>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
 					<argLine>@{surefireArgLine}</argLine> <!-- Sets the VM argument line used when unit tests are run.
@@ -163,7 +162,7 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
 					<skipITs>${skipITs}</skipITs>
-					<useModulePath>true</useModulePath>
+					<useModulePath>false</useModulePath>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
 					<argLine>@{failsafeArgLine}</argLine> <!-- Sets the VM argument line used when integration tests are run.
