--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <properties>
         <activej-bytebuf.version>4.3-r10</activej-bytebuf.version>
         <activej-common.version>4.3-r8</activej-common.version>
-        <apfloat.version>1.14.0-r1-SNAPSHOT</apfloat.version>
+        <apfloat.version>1.14.0-r1</apfloat.version>
         <asm.version>9.9</asm.version>
         <jsonschema2pojo-core.version>1.2.2</jsonschema2pojo-core.version>
         <commons-lang3.version>3.14.0</commons-lang3.version>
