--- a/tinkar-bom/pom.xml
+++ b/tinkar-bom/pom.xml
@@ -13,6 +13,11 @@
     <name>Tinkar BOM</name>
     <description>Centralized dependency versions for Tinkar subprojects</description>
 
+    <properties>
+        <log4j.version>3.0.0-beta3</log4j.version>
+        <slf4j.version>2.0.17</slf4j.version>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <!-- Import upstream BOMs -->
@@ -26,17 +31,43 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-bom</artifactId>
-                <version>3.0.0-beta3</version>
+                <version>${log4j.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-bom</artifactId>
-                <version>2.0.17</version>
+                <version>${slf4j.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <!-- Lock Log4j to 3.0.0-beta3 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>3.0.0-beta2</version>
+            <!-- TODO: There is no 3.0.0-beta3 for log4j-api -->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-plugins</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>3.0.0-beta2</version>
+            <!-- TODO: There is no 3.0.0-beta3 for log4j-slf4j2-impl -->
+        </dependency>
+    </dependencies>
 </project>
