--- a/events/pom.xml
+++ b/events/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.126.0-SNAPSHOT</version>
+        <version>1.126.0-FVKB-27-changeset-logging-SNAPSHOT</version>
     </parent>
 
     <artifactId>events</artifactId>
