chore: add maven-assembly-plugin version property
- Define maven-assembly-plugin.version as 3.7.1 in parent POM properties
- Centralizes plugin version management for consistency across modules

--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -22,6 +22,7 @@
 	</modules>
 
 	<properties>
+		<maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
 		<reasoner-test-data.groupid>dev.ikm.reasoner-test-data</reasoner-test-data.groupid>
 		<skipITs>true</skipITs>
 		<snomed-test-data.groupid>dev.ikm.snomed</snomed-test-data.groupid>
