refactor: make TinkarProviderExtension abstract and add concrete implementations
- Rename TinkarProviderExtension to KeyValueProviderExtension (abstract)
- Add concrete provider extension classes for different storage backends:
  * OpenSpinedArrayKeyValueProvider
  * NewSpinedArrayKeyValueProvider
  * NewEphemeralKeyValueProvider
- Extract controller name constants to dedicated classes in each provider
- Update all test classes to use OpenSpinedArrayKeyValueProvider
- Remove duplicate TestConstants from snomed core package
- Comment out exception throwing for late binding in semantic transformation
- Update referenced component NID handling to use Entity.nid()
- Bump version from 1.126.0 to 1.126.1

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -115,7 +115,7 @@
             <artifactId>eclipse-collections</artifactId>
         </dependency>
 
-        <!-- JUnit Jupiter API for TinkarProviderExtension (test fixture in src/main) -->
+        <!-- JUnit Jupiter API for KeyValueProviderExtension (test fixture in src/main) -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
