--- a/provider/changeset-writer-provider/pom.xml
+++ b/provider/changeset-writer-provider/pom.xml
@@ -22,5 +22,11 @@
             <groupId>dev.ikm.tinkar</groupId>
             <artifactId>entity-provider</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 </project>
+
