fix: prevent JVM reuse and static state pollution in tests
- Mark MAX_ENTITY_SIZE and MAX_VERSION_SIZE as volatile for thread safety
- Configure maven-surefire-plugin to use fresh JVM per test class
- Add JVM reuse detection in KeyValueProviderExtension
- Add static state pollution checks (caches, EntityRecordFactory state)
- Throw errors when unsafe JVM reuse is detected between test classes
- Add detailed diagnostic logging for test execution environment
- Export entity provider module for reflection access
- Add caffeine cache dependency to integration module
- Bump version to 1.126.3-kl-merge-SNAPSHOT

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -182,6 +182,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>--enable-preview</argLine>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>  <!-- CRITICAL: Fresh JVM per test class -->
                 </configuration>
             </plugin>
         </plugins>
