--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -58,7 +58,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>${maven-assembly-plugin.version}</version>
+					<version>${maven.assembly-plugin.version}</version>
 				</plugin>
 				<!-- other plugins -->
 				<plugin>
