implement manual json converter

--- a/provider/changeset-writer-provider/pom.xml
+++ b/provider/changeset-writer-provider/pom.xml
@@ -27,6 +27,27 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+        <!-- Runtime dependency for EntityService when using ProtobufToJsonConverterTool -->
+        <dependency>
+            <groupId>dev.ikm.tinkar</groupId>
+            <artifactId>data-ephemeral-provider</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Configure exec plugin to include runtime dependencies for ProtobufToJsonConverterTool -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>dev.ikm.tinkar.provider.changeset.ProtobufToJsonConverterTool</mainClass>
+                    <classpathScope>runtime</classpathScope>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
 
