--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.126.0-SNAPSHOT</version>
+        <version>1.126.0-gitflow-plugin-with-checkpoint-SNAPSHOT</version>
     </parent>
 
     <artifactId>common</artifactId>
